--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
         <target.version>1.8</target.version>
         <!-- Database dependency version -->
         <!--configurable variables-->
-        <env>staging3</env>
+        <env>${env}</env>
     </properties>
     <dependencies>
         <dependency>
@@ -79,6 +79,15 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-report-plugin</artifactId>
+                <version>2.19.1</version>
+            </plugin>
+        </plugins>
+    </reporting>
     <build>
         <resources>
             <!-- Filter resource files -->
