--- a/pom.xml
+++ b/pom.xml
@@ -79,53 +79,97 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-    <reporting>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-report-plugin</artifactId>
-                <version>2.19.1</version>
-            </plugin>
-        </plugins>
-    </reporting>
-    <build>
-        <resources>
-            <!-- Filter resource files -->
-            <resource>
-                <directory>src/test/resources</directory>
-                <filtering>true</filtering>
-            </resource>
-        </resources>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                </configuration>
-                <version>3.5.1</version>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-failsafe-plugin</artifactId>
-                <version>2.18.1</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>integration-test</goal>
-                            <goal>verify</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <includes>
-                        <include>**/*Runner*.class</include>
-                    </includes>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
+   <build>
+       <resources>
+           <!-- Filter resource files -->
+           <resource>
+               <directory>src/test/resources</directory>
+               <filtering>true</filtering>
+           </resource>
+       </resources>
+       <plugins>
+           <plugin>
+               <groupId>org.apache.maven.plugins</groupId>
+               <artifactId>maven-compiler-plugin</artifactId>
+               <configuration>
+                   <source>1.8</source>
+                   <target>1.8</target>
+               </configuration>
+               <version>2.3.2</version>
+           </plugin>
+           <plugin>
+               <groupId>com.lazerycode.selenium</groupId>
+               <artifactId>driver-binary-downloader-maven-plugin</artifactId>
+               <version>1.0.9</version>
+               <configuration>
+                   <!-- root directory that downloaded driver binaries will be stored in -->
+                   <rootStandaloneServerDirectory>src/resources/binaries</rootStandaloneServerDirectory>
+                   <!-- Where you want to store downloaded zip files -->
+                   <downloadedZipFileDirectory>src/resources/zips</downloadedZipFileDirectory>
+               </configuration>
+               <executions>
+                   <execution>
+                       <goals>
+                           <goal>selenium</goal>
+                       </goals>
+                   </execution>
+               </executions>
+           </plugin>
+           <plugin>
+               <groupId>org.apache.maven.plugins</groupId>
+               <artifactId>maven-failsafe-plugin</artifactId>
+               <version>2.19.1</version>
+               <executions>
+                   <execution>
+                       <goals>
+                           <goal>integration-test</goal>
+                           <goal>verify</goal>
+                       </goals>
+                   </execution>
+               </executions>
+               <configuration>
+                   <includes>
+                       <include>**/*Runner.class</include>
+                   </includes>
+               </configuration>
+           </plugin>
+       </plugins>
+       <pluginManagement>
+           <plugins>
+               <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
+               <plugin>
+                   <groupId>org.eclipse.m2e</groupId>
+                   <artifactId>lifecycle-mapping</artifactId>
+                   <version>1.0.0</version>
+                   <configuration>
+                       <lifecycleMappingMetadata>
+                           <pluginExecutions>
+                               <pluginExecution>
+                                   <pluginExecutionFilter>
+                                       <groupId>
+                                           com.lazerycode.selenium
+                                       </groupId>
+                                       <artifactId>
+                                           driver-binary-downloader-maven-plugin
+                                       </artifactId>
+                                       <versionRange>
+                                           [1.0.9,)
+                                       </versionRange>
+                                       <goals>
+                                           <goal>selenium</goal>
+                                       </goals>
+                                   </pluginExecutionFilter>
+                                   <action>
+                                       <ignore></ignore>
+                                   </action>
+                               </pluginExecution>
+                           </pluginExecutions>
+                       </lifecycleMappingMetadata>
+                   </configuration>
+               </plugin>
+           </plugins>
+       </pluginManagement>
+  </build>
 </project>
 
 
