Changed the pom xml to include parameterized environment url . If its missing will default to staging18

--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,8 @@
         <target.version>1.8</target.version>
         <!-- Database dependency version -->
         <!--configurable variables-->
-        <env>${env}</env>
+        <env>https://staging18.quidco.com</env>
+
     </properties>
     <dependencies>
         <dependency>
