Added Runner for signup Validation + completed QA-247

--- a/pom.xml
+++ b/pom.xml
@@ -83,7 +83,7 @@
        <resources>
            <!-- Filter resource files -->
            <resource>
-               <directory>src/test/resources</directory>
+               <directory>src/test/resources/config</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
