Fixed failing Jenkins due to file hash

--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,7 @@
                    <rootStandaloneServerDirectory>src/resources/binaries</rootStandaloneServerDirectory>
                    <!-- Where you want to store downloaded zip files -->
                    <downloadedZipFileDirectory>src/resources/zips</downloadedZipFileDirectory>
+                   <checkFileHashes>false</checkFileHashes>
                </configuration>
                <executions>
                    <execution>
