--- a/pom.xml
+++ b/pom.xml
@@ -100,7 +100,7 @@
            <plugin>
                <groupId>com.lazerycode.selenium</groupId>
                <artifactId>driver-binary-downloader-maven-plugin</artifactId>
-               <version>1.0.9</version>
+               <version>1.0.11</version>
                <configuration>
                    <!-- root directory that downloaded driver binaries will be stored in -->
                    <rootStandaloneServerDirectory>src/resources/binaries</rootStandaloneServerDirectory>
@@ -108,10 +108,7 @@
                    <downloadedZipFileDirectory>src/resources/zips</downloadedZipFileDirectory>
                    <checkFileHashes>false</checkFileHashes>
                    <onlyGetDriversForHostOperatingSystem>true</onlyGetDriversForHostOperatingSystem>
-                   <operatingSystems>
-                       <osx>true</osx>
-                       <linux>true</linux>
-                   </operatingSystems>
+                   <overwriteFilesThatExist>true</overwriteFilesThatExist>
                </configuration>
                <executions>
                    <execution>
