removed unnecessary plugin

--- a/pom.xml
+++ b/pom.xml
@@ -97,27 +97,27 @@
                </configuration>
                <version>2.3.2</version>
            </plugin>
-           <plugin>
-               <groupId>com.lazerycode.selenium</groupId>
-               <artifactId>driver-binary-downloader-maven-plugin</artifactId>
-               <version>1.0.11</version>
-               <configuration>
-                   <!-- root directory that downloaded driver binaries will be stored in -->
-                   <rootStandaloneServerDirectory>src/resources/binaries</rootStandaloneServerDirectory>
-                   <!-- Where you want to store downloaded zip files -->
-                   <downloadedZipFileDirectory>src/resources/zips</downloadedZipFileDirectory>
-                   <checkFileHashes>false</checkFileHashes>
-                   <onlyGetDriversForHostOperatingSystem>true</onlyGetDriversForHostOperatingSystem>
-                   <overwriteFilesThatExist>true</overwriteFilesThatExist>
-               </configuration>
-               <executions>
-                   <execution>
-                       <goals>
-                           <goal>selenium</goal>
-                       </goals>
-                   </execution>
-               </executions>
-           </plugin>
+           <!--<plugin>-->
+               <!--<groupId>com.lazerycode.selenium</groupId>-->
+               <!--<artifactId>driver-binary-downloader-maven-plugin</artifactId>-->
+               <!--<version>1.0.11</version>-->
+               <!--<configuration>-->
+                   <!--&lt;!&ndash; root directory that downloaded driver binaries will be stored in &ndash;&gt;-->
+                   <!--<rootStandaloneServerDirectory>src/resources/binaries</rootStandaloneServerDirectory>-->
+                   <!--&lt;!&ndash; Where you want to store downloaded zip files &ndash;&gt;-->
+                   <!--<downloadedZipFileDirectory>src/resources/zips</downloadedZipFileDirectory>-->
+                   <!--<checkFileHashes>false</checkFileHashes>-->
+                   <!--<onlyGetDriversForHostOperatingSystem>true</onlyGetDriversForHostOperatingSystem>-->
+                   <!--<overwriteFilesThatExist>true</overwriteFilesThatExist>-->
+               <!--</configuration>-->
+               <!--<executions>-->
+                   <!--<execution>-->
+                       <!--<goals>-->
+                           <!--<goal>selenium</goal>-->
+                       <!--</goals>-->
+                   <!--</execution>-->
+               <!--</executions>-->
+           <!--</plugin>-->
        </plugins>
        <pluginManagement>
            <plugins>
