--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
         <target.version>1.8</target.version>
         <!-- Database dependency version -->
         <!--configurable variables-->
-        <env>https://staging20.quidco.com</env>
+        <env>http://staging20.quidco.com</env>
         <browser>chrome</browser>
 
     </properties>
