--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,11 @@
                </configuration>
                <version>2.3.2</version>
            </plugin>
+           <plugin>
+               <groupId>org.apache.httpcomponents</groupId>
+               <artifactId>httpclient</artifactId>
+               <version>4.5.3</version>
+           </plugin>
        </plugins>
 
   </build>
