--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,11 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5</version>
+        </dependency>
     </dependencies>
    <build>
        <resources>
@@ -98,11 +103,7 @@
                </configuration>
                <version>2.3.2</version>
            </plugin>
-           <plugin>
-               <groupId>org.apache.httpcomponents</groupId>
-               <artifactId>httpclient</artifactId>
-               <version>4.5.3</version>
-           </plugin>
+
        </plugins>
 
   </build>
