--- a/pom.xml
+++ b/pom.xml
@@ -82,7 +82,7 @@
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
-            <version>4.5</version>
+            <version>4.5.2</version>
         </dependency>
     </dependencies>
    <build>
@@ -103,7 +103,36 @@
                </configuration>
                <version>2.3.2</version>
            </plugin>
-
+           <plugin>
+               <groupId>org.apache.maven.plugins</groupId>
+               <artifactId>maven-compiler-plugin</artifactId>
+               <configuration>
+                   <source>1.8</source>
+                   <target>1.8</target>
+               </configuration>
+               <version>2.3.2</version>
+           </plugin>
+           <plugin>
+               <groupId>org.codehaus.mojo</groupId>
+               <artifactId>exec-maven-plugin</artifactId>
+               <version>1.2.1</version>
+               <executions>
+                   <execution>
+                       <id>script-chmod</id>
+                       <phase>install</phase>
+                       <goals>
+                           <goal>exec</goal>
+                       </goals>
+                       <configuration>
+                           <executable>chmod</executable>
+                           <arguments>
+                               <argument>+x</argument>
+                               <argument>/src/test/resources/</argument>
+                           </arguments>
+                       </configuration>
+                   </execution>
+               </executions>
+           </plugin>
        </plugins>
 
   </build>
